pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bastion
  name: bastion
spec:
  containers:
  - image: debian:8.11
    name: bastion
    resources: {}
    command: ["bash"]
    args: ["-c", "while true; do sleep 1; done"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
