svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svc-sample
  name: svc-sample
spec:
  ports:
  - name: "application-port"
    port: 8900
    protocol: TCP
    targetPort: 9200
  selector:
    app: deploy-match-label
  type: NodePort
status:
  loadBalancer: {}
